--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,37 @@
+html, body {
+    height: 100%;
+}
+
 body {
+    margin: 0;
     background-image: url('./img/gabriel-barletta-87533-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% top;
     background-attachment: fixed;
+}
+
+.c-wrap-container {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.c-btn-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 10rem;
+    height: 10rem;
+    border: 2px solid slateblue;
 }
 
 .o-btn-name,
