add functionality to remove display in 1.5 sec

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,10 @@ body {
 }
 
 .c-btn-container {
+    display: none;
+}
+
+.btnContainerActive {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
